--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 
 body {
     background-color: black;
-    margin: 100px;
+    margin: 80px 100px;
 }
 h1 {
     font-size: 50px;
@@ -22,15 +22,18 @@ h2 {
 }
 
 a {
-    color: pink;
+    .link {
+        color: pink;
+    }
     text-decoration: none;
 }
 a:hover {
-    color: red;
+    .link {
+        color: rgb(255, 123, 145);
+    }
 }
-a:visited {
-    color: purple;
-}
-a:active {
-    color: purple;
+a:visited, a:active {
+    .link {
+        color: rgba(232, 125, 180, 0.833);
+    }
 }
