--- a/style.css
+++ b/style.css
@@ -6,36 +6,47 @@
 * {
     font-family: "MingLiU";
     color: white;
+    scrollbar-color: rgba(255, 255, 255, 0.3) black;
 }
-
+::selection {
+    background-color: pink;
+}
 body {
     background-color: black;
-    margin: 80px 100px;
+    margin: 50px 60px;
+    overflow-x: hidden;
 }
 h1 {
-    font-size: 50px;
+    font-size: 40px;
+    margin: 0;
 }
 h2 {
+    color: pink;
     margin-top: 50px;
+    font-size: 22px;
     font-weight: 300;
 }
-
+p {
+    font-size: 16px;
+    text-wrap: nowrap;
+}
 span {
     color: rgba(255, 255, 255, 0.3);
     display: none;
 }
 
 a {
-    h2 {
-        color: pink;
-    }
     text-decoration: none;
     text-wrap: nowrap;
 }
 a:hover {
     h2 {
         color: rgb(255, 123, 145);
+        font-size: 25px;
         font-weight: bold;
+    }
+    p {
+        font-size: 18px;
     }
     span {
         display: initial;
